2006-02-24 Implemented alpha support in contour and contourf - EF

2006-02-22 Fixed gtk main quit bug when quit was called before
           mainloop. - JDH

2006-02-22 Small change to colors.py to workaround apparent
           bug in numpy masked array module - JW

2006-02-22 Fixed bug in ScalarMappable.to_rgba() reported by
           Ray Jones, and fixed incorrect fix found by Jeff
           Whitaker - EF

===============================================================
2006-02-22 Released 0.87

2006-02-21 Fixed portrait/landscape orientation in postscript backend - DSD

2006-02-21 fix bug introduced in yesterday's bug fix - SC

2006-02-20 backend_gtk.py FigureCanvasGTK.draw(): fix bug reported by
           David Tremouilles - SC

2006-02-20 Remove the "pygtk.require('2.4')" error from
           examples/embedding_in_gtk2.py - SC

2006-02-18 backend_gtk.py FigureCanvasGTK.draw(): simplify to use (rather than
           duplicate) the expose_event() drawing code - SC

2006-02-12 Added stagger or waterfall plot capability to LineCollection;
           illustrated in examples/collections.py. - EF

2006-02-11 Massive cleanup of the usetex code in the postscript backend. Possibly
           fixed the clipping issue users were reporting with older versions of
           ghostscript - DSD

2006-02-11 Added autolim kwarg to axes.add_collection.  Changed
           collection get_verts() methods accordingly. - EF

2006-02-09 added a temporary rc parameter text.dvipnghack, to allow Mac users to get nice
           results with the usetex option. - DSD

2006-02-09 Fixed a bug related to setting font sizes with the usetex option. - DSD

2006-02-09 Fixed a bug related to usetex's latex code. - DSD

2006-02-09 Modified behavior of font.size rc setting. You should define font.size in pts,
           which will set the "medium" or default fontsize. Special text sizes like axis
           labels or tick labels can be given relative font sizes like small, large,